# leaRning

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
01-data/atpiec/: Experiment.txt
01-data/atpiec/COMTRADE/: 2024-05-07exp1.CFG  2024-05-07exp2.CFG
01-data/atpiec/atp/: REGUAS_BJDLAPA.acp  REGUAS_BJDLAPA.atp  REGUAS_BJDLAPA.pl4  REGUAS_BJDLAPA_2nd.atp  REGUAS_BJDLAPA_2nd.pl4
01-data/atpiec/comtrade/: HR_10022.CFG
01-data/atpiec/pcap/: 2024-05-07_exp1.pcapng  2024-05-07_exp2.pcapng  svMeu1.pcapng  svMeu2.pcapng
01-data/atpiec/sgc/: sub.CFG  sub.HDR
01-data/old/atpiec/mala/: mala.CFG
01-data/old/atpiec/sgc/: pub.CFG  pub.HDR
02-scripts/: 01-penguins_example.R  02-data_transform_rows.R  03-data_transform_columns.R  04-data_transform_groups.R  05-data_tidying.R  06-data_import.R  20-comtrade.R  21-pcap.R  97-atpiec_atp.R  98-atpiec.R  98-atpiec_iec.R
02-scripts/01-atpiec/: 01-atp.R  02-comtrade.R  02-pcap.R  03-comtrade.R  03-pcap.R
src/: comtrade_parser.py  pcap_parser.py  pl4_parser.py
